# lab3_asd

./: CMakeLists.txt  main.cpp  second_part.cpp  second_part.h  test.cpp
